fixed broken css

--- a/src/components/categories/category.css
+++ b/src/components/categories/category.css
@@ -42,7 +42,10 @@ a {
 @media screen and (min-width: 768px) {
   .category-container {
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 74%;
+    /* border: 2px solid red; */
+    margin: auto;
   }
 
   .card {
